--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamza Nasir</title>
-    <!-- <link rel="stylesheet" href="./style.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
@@ -46,7 +45,7 @@
         backdrop-filter: blur(10px);
         background: rgba(28, 25, 23, 0.6);
         border-radius: 1rem;
-        padding: 2rem;
+        padding: 1.5rem;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
     }
 
@@ -56,26 +55,10 @@
         padding-bottom: 3rem;
     }
 
-    .hero-content {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        max-width: 1200px;
-        gap: 2rem;
-        flex-wrap: wrap;
-    }
-
-
-    .hero-text {
-        flex: 1;
-        min-width: 300px;
-    }
-
     .hero-text h1 {
         font-size: clamp(2rem, 5vw, 5rem);
         font-weight: 800;
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
         line-height: 1.1;
     }
 
@@ -95,7 +78,6 @@
     .social-links {
         display: flex;
         gap: 0.5rem;
-        margin-top: 1rem;
     }
 
     .social-links a {
@@ -133,20 +115,6 @@
         }
     }
 
-    .about-section {
-        max-width: 1200px;
-        width: 100%;
-        display: flex;
-        gap: 2rem;
-        flex-wrap: wrap;
-        align-items: center;
-    }
-
-    .about-text {
-        flex: 1;
-        min-width: 300px;
-    }
-
     .about-text h2 {
         font-size: 2.5rem;
         margin-bottom: 1rem;
@@ -182,24 +150,12 @@
     }
 
 
-    /*  Project sections */
+    /* Project sections */
     .project-section {
         position: relative;
         overflow: hidden;
     }
 
-    .project-container {
-        max-width: 1200px;
-        width: 100%;
-        display: flex;
-        align-items: flex-end;
-        gap: 2rem;
-        position: relative;
-    }
-
-    .project-container .reverse {
-        flex-direction: row-reverse;
-    }
 
     .project-screenshot {
         position: absolute;
@@ -237,11 +193,10 @@
         backdrop-filter: blur(12px);
         background: rgba(28, 25, 23, 0.6);
         border-radius: 1rem;
-        padding: 2.5rem;
+        padding: 2rem;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
         z-index: 2;
         position: relative;
-        max-width: 500px;
         transition: transform 0.3s ease;
         cursor: pointer;
     }
@@ -268,31 +223,34 @@
 </style>
 
 <body>
-    <!-- Hero Section -->
     <div class="section hero-section">
-        <div class="hero-content">
-            <div class="hero-text">
-                <div class="glass">
-                    <h1>Hi there, I'm</h1>
-                </div>
-                <div class="glass" style="margin-top: 1rem;">
-                    <h1 class="accent">Hamza Nasir.</h1>
-                </div>
-                <div class="glass" style="margin-top: 1rem; width: fit-content;">
-                    <div class="social-links">
-                        <a href="https://github.com" target="_blank" aria-label="GitHub">
-                            <i class="fa-brands fa-github"></i>
-                        </a>
-                        <a href="https://x.com" target="_blank" aria-label="Twitter">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">
-                            <i class="fa-brands fa-linkedin"></i>
-                        </a>
+        <div class="container hero-content">
+            <div class="row align-items-center justify-content-center justify-content-md-between w-100">
+                <div class="col-md-7 col-lg-6 mb-4 mb-md-0 hero-text">
+                    <div class="glass mb-3 p-3">
+                        <h1 class="m-0">Hi there, I'm</h1>
+                    </div>
+                    <div class="glass mb-3 p-3">
+                        <h1 class="accent m-0">Hamza Nasir.</h1>
+                    </div>
+                    <div class="glass mt-4 p-3 d-inline-block">
+                        <div class="social-links">
+                            <a href="https://github.com" target="_blank" aria-label="GitHub">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="https://x.com" target="_blank" aria-label="Twitter">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-5 col-lg-4 d-flex justify-content-center">
+                    <img src="https://placehold.co/400" alt="Profile" class="profile-img">
+                </div>
             </div>
-            <img src="https://placehold.co/400" alt="Profile" class="profile-img">
         </div>
         <div class="scroll-indicator" onclick="document.getElementById('about').scrollIntoView()">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -302,45 +260,54 @@
         </div>
     </div>
 
-    <!-- About Section -->
     <div class="section" id="about">
-        <div class="about-section">
-            <div class="about-text glass">
-                <h2 class="accent">About</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quibusdam facilis dolores rerum nihil
-                    iste praesentium beatae explicabo dolor fuga a eligendi nostrum, eum ab nobis enim. Praesentium,
-                    officiis minus.
-                    <br><br>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro debitis aliquid quibusdam dolorem
-                    optio quia possimus veritatis deleniti minus repellat fugit, praesentium soluta illo corporis,
-                    itaque necessitatibus et quae tempore.
-                </p>
-            </div>
-            <div class="tech-icons">
-                <div class="tech-row">
-                    <div class="tech-icon"><i class="fa-brands fa-python"></i></div>
-                    <div class="tech-icon"><i class="fa-solid fa-flask"></i></div>
-                    <div class="tech-icon"><i class="fa-brands fa-java"></i></div>
+        <div class="container about-section">
+            <div class="row align-items-center justify-content-center gx-5">
+                <div class="col-lg-7 mb-4 mb-lg-0">
+                    <div class="about-text glass p-4">
+                        <h2 class="accent">About</h2>
+                        <p class="mb-0">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quibusdam facilis dolores
+                            rerum nihil
+                            iste praesentium beatae explicabo dolor fuga a eligendi nostrum, eum ab nobis enim.
+                            Praesentium,
+                            officiis minus.
+                            <br><br>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro debitis aliquid quibusdam
+                            dolorem
+                            optio quia possimus veritatis deleniti minus repellat fugit, praesentium soluta illo
+                            corporis,
+                            itaque necessitatibus et quae tempore.
+                        </p>
+                    </div>
                 </div>
-                <div class="tech-row">
-                    <div class="tech-icon"><i class="fa-brands fa-html5"></i></div>
-                    <div class="tech-icon"><i class="fa-brands fa-css"></i></div>
-                    <div class="tech-icon"><i class="fa-brands fa-js"></i></div>
+                <div class="col-lg-auto d-flex justify-content-center">
+                    <div class="tech-icons">
+                        <div class="tech-row">
+                            <div class="tech-icon"><i class="fa-brands fa-python"></i></div>
+                            <div class="tech-icon"><i class="fa-solid fa-flask"></i></div>
+                            <div class="tech-icon"><i class="fa-brands fa-java"></i></div>
+                        </div>
+                        <div class="tech-row">
+                            <div class="tech-icon"><i class="fa-brands fa-html5"></i></div>
+                            <div class="tech-icon"><i class="fa-brands fa-css"></i></div>
+                            <div class="tech-icon"><i class="fa-brands fa-js"></i></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- basic project template 1 -->
     <div class="section project-section">
-        <div class="project-container">
+        <div class="container project-container d-flex align-items-center justify-content-end">
             <img src="https://placehold.co/800x500" alt="project 1" class="project-screenshot">
-            <div style="flex: 1;"></div>
-            <a href="https://github.com" target="_blank" style="text-decoration: none; color: inherit;">
+            <div class="col-md-5 d-none d-md-block"></div>
+            <a href="https://github.com" target="_blank"
+                class="text-decoration-none text-white col-12 col-md-7 col-lg-5">
                 <div class="project-card">
                     <h3 class="accent">Project One</h3>
-                    <p>
+                    <p class="mb-0">
                         An innovative application that solves real-world problems. Built with modern
                         technologies and best practices, featuring an intuitive user interface and
                         powerful functionality.
@@ -351,15 +318,15 @@
     </div>
 
 
-    <!-- basic project template 2 -->
     <div class="section project-section">
-        <div class="project-container reverse">
-            <img src="https://placehold.co/800x500" alt="project 2" class="project-screenshot">
-            <div style="flex: 1;"></div>
-            <a href="https://github.com" target="_blank" style="text-decoration: none; color: inherit;">
+        <div class="container project-container d-flex align-items-center justify-content-end">
+            <img src="https://placehold.co/800x500" alt="project 1" class="project-screenshot">
+            <div class="col-md-5 d-none d-md-block"></div>
+            <a href="https://github.com" target="_blank"
+                class="text-decoration-none text-white col-12 col-md-7 col-lg-5">
                 <div class="project-card">
                     <h3 class="accent">Project Two</h3>
-                    <p>
+                    <p class="mb-0">
                         An innovative application that solves real-world problems. Built with modern
                         technologies and best practices, featuring an intuitive user interface and
                         powerful functionality.
@@ -370,15 +337,15 @@
     </div>
 
 
-    <!-- basic project template 3 -->
     <div class="section project-section">
-        <div class="project-container reverse">
-            <img src="https://placehold.co/800x500" alt="project 2" class="project-screenshot">
-            <div style="flex: 1;"></div>
-            <a href="https://github.com" target="_blank" style="text-decoration: none; color: inherit;">
+        <div class="container project-container d-flex align-items-center justify-content-end">
+            <img src="https://placehold.co/800x500" alt="project 1" class="project-screenshot">
+            <div class="col-md-5 d-none d-md-block"></div>
+            <a href="https://github.com" target="_blank"
+                class="text-decoration-none text-white col-12 col-md-7 col-lg-5">
                 <div class="project-card">
                     <h3 class="accent">Project Three</h3>
-                    <p>
+                    <p class="mb-0">
                         An innovative application that solves real-world problems. Built with modern
                         technologies and best practices, featuring an intuitive user interface and
                         powerful functionality.
@@ -386,12 +353,11 @@
                 </div>
             </a>
         </div>
-    </div>
     </div>
 
 
     <div class="section" style="min-height: auto; scroll-snap-align: end;">
-        <footer>
+        <footer class="container-fluid">
             <p>&copy; <span id="year">Hamza Nasir</span></p>
         </footer>
     </div>
