--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     }
 
     html {
+
         scroll-behavior: smooth;
         scroll-snap-type: y mandatory;
-        overflow-y: scroll;
+        /* overflow-y: scroll; */
     }
 
     body {
@@ -27,7 +28,7 @@
         color: white;
         background: linear-gradient(to bottom right, #5b21b6 0%, #be185d 100%);
         background-attachment: fixed;
-        min-height: 100vh;
+        height: 100vh;
     }
 
     /* hero basic section */
@@ -159,6 +160,8 @@
 
     .project-screenshot {
         position: absolute;
+        top: 1rem;
+        left: 1rem;
         max-width: 50%;
         height: auto;
         animation: float 5s ease-in-out infinite;
@@ -175,6 +178,7 @@
     .project-container .reverse .project-screenshot {
         left: -25%;
         transform: translateX(50%);
+        /* transform: translateY(90%); */
     }
 
     @keyframes float {
@@ -196,7 +200,11 @@
         padding: 2rem;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
         z-index: 2;
-        position: relative;
+        position: absolute;
+        bottom: 6rem;
+        right: 6rem;
+        max-width: 50rem;
+        min-height: 30rem;
         transition: transform 0.3s ease;
         cursor: pointer;
     }
@@ -219,6 +227,48 @@
         text-align: center;
         padding: 2rem;
         font-weight: bold;
+    }
+
+    @media (max-width: 820px) {
+        /* html {
+            scroll-snap-type: none;
+        } */
+
+        .hero-content {
+            flex-direction: column;
+            text-align: center;
+        }
+
+        .about-section {
+            flex-direction: column;
+        }
+
+        .tech-row {
+            justify-content: center;
+        }
+
+        .project-container {
+            display: flex;
+            gap: 10rem
+        }
+
+        .project-screenshot {
+            position: relative;
+            max-width: 100%;
+            left: auto !important;
+            /* top: 0; */
+            right: auto !important;
+            transform: none !important;
+            margin-bottom: 1rem;
+        }
+
+        .project-container {
+            flex-direction: column !important;
+        }
+
+        .project-card {
+            max-width: 100%;
+        }
     }
 </style>
 
@@ -340,7 +390,6 @@
     <div class="section project-section">
         <div class="container project-container d-flex align-items-center justify-content-end">
             <img src="https://placehold.co/800x500" alt="project 1" class="project-screenshot">
-            <div class="col-md-5 d-none d-md-block"></div>
             <a href="https://github.com" target="_blank"
                 class="text-decoration-none text-white col-12 col-md-7 col-lg-5">
                 <div class="project-card">
