--- a/index.html
+++ b/index.html
@@ -8,269 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    html {
-
-        scroll-behavior: smooth;
-        scroll-snap-type: y mandatory;
-        /* overflow-y: scroll; */
-    }
-
-    body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        color: white;
-        background: linear-gradient(to bottom right, #5b21b6 0%, #be185d 100%);
-        background-attachment: fixed;
-        height: 100vh;
-    }
-
-    /* hero basic section */
-
-    .section {
-        min-height: 100vh;
-        scroll-snap-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 2rem;
-    }
-
-    .glass {
-        backdrop-filter: blur(10px);
-        background: rgba(28, 25, 23, 0.6);
-        border-radius: 1rem;
-        padding: 1.5rem;
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-    }
-
-    .hero-section {
-        flex-direction: column;
-        justify-content: space-between;
-        padding-bottom: 3rem;
-    }
-
-    .hero-text h1 {
-        font-size: clamp(2rem, 5vw, 5rem);
-        font-weight: 800;
-        margin-bottom: 0.5rem;
-        line-height: 1.1;
-    }
-
-    .accent {
-        background: linear-gradient(135deg, #a855f7 0%, #ec4899 100%);
-        background-clip: text;
-    }
-
-    .profile-img {
-        width: clamp(200px, 30vw, 400px);
-        height: clamp(200px, 30vw, 400px);
-        border-radius: 50%;
-        border: 6px solid white;
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-    }
-
-    .social-links {
-        display: flex;
-        gap: 0.5rem;
-    }
-
-    .social-links a {
-        color: white;
-        font-size: 2rem;
-        padding: 0.5rem;
-        transition: all 0.3s ease;
-    }
-
-    .social-links a:hover {
-        color: #a855f7;
-        transform: scale(1.1);
-    }
-
-
-    .scroll-indicator {
-        animation: bounce 2s infinite;
-        cursor: pointer;
-        transition: color 0.3s ease;
-    }
-
-    .scroll-indicator:hover {
-        color: #a855f7;
-    }
-
-    @keyframes bounce {
-
-        0%,
-        100% {
-            transform: translateY(0);
-        }
-
-        50% {
-            transform: translateY(-1rem);
-        }
-    }
-
-    .about-text h2 {
-        font-size: 2.5rem;
-        margin-bottom: 1rem;
-    }
-
-    .about-text p {
-        line-height: 1.8;
-        opacity: 0.9;
-    }
-
-    .tech-icons {
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-    }
-
-    .tech-row {
-        display: flex;
-        gap: 2rem;
-    }
-
-    .tech-icon {
-        backdrop-filter: blur(12px);
-        background: rgba(28, 25, 23, 0.6);
-        width: 5rem;
-        height: 5rem;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 2.5rem;
-        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
-    }
-
-
-    /* Project sections */
-    .project-section {
-        position: relative;
-        overflow: hidden;
-    }
-
-
-    .project-screenshot {
-        position: absolute;
-        top: 1rem;
-        left: 1rem;
-        max-width: 50%;
-        height: auto;
-        animation: float 5s ease-in-out infinite;
-        z-index: -1;
-        box-shadow: 0 20px 60px rgba(0, 0, 0, 0.4);
-        border-radius: 0.5rem;
-    }
-
-    .project-container:not(.reverse) .project-screenshot {
-        left: -2%;
-        transform: translateX(-50%);
-    }
-
-    .project-container .reverse .project-screenshot {
-        left: -25%;
-        transform: translateX(50%);
-        /* transform: translateY(90%); */
-    }
-
-    @keyframes float {
-
-        0%,
-        100% {
-            transform: translateY(0);
-        }
-
-        50% {
-            transform: translateY(2vh);
-        }
-    }
-
-    .project-card {
-        backdrop-filter: blur(12px);
-        background: rgba(28, 25, 23, 0.6);
-        border-radius: 1rem;
-        padding: 2rem;
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-        z-index: 2;
-        position: absolute;
-        bottom: 6rem;
-        right: 6rem;
-        max-width: 50rem;
-        min-height: 30rem;
-        transition: transform 0.3s ease;
-        cursor: pointer;
-    }
-
-    .project-card:hover {
-        transform: perspective(1000px) rotateX(2deg) rotateY(-2deg) translateY(-5px);
-    }
-
-    .project-card h3 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-    }
-
-    .project-card p {
-        line-height: 1.6;
-        opacity: 0.9;
-    }
-
-    footer {
-        text-align: center;
-        padding: 2rem;
-        font-weight: bold;
-    }
-
-    @media (max-width: 820px) {
-        /* html {
-            scroll-snap-type: none;
-        } */
-
-        .hero-content {
-            flex-direction: column;
-            text-align: center;
-        }
-
-        .about-section {
-            flex-direction: column;
-        }
-
-        .tech-row {
-            justify-content: center;
-        }
-
-        .project-container {
-            display: flex;
-            gap: 10rem
-        }
-
-        .project-screenshot {
-            position: relative;
-            max-width: 100%;
-            left: auto !important;
-            /* top: 0; */
-            right: auto !important;
-            transform: none !important;
-            margin-bottom: 1rem;
-        }
-
-        .project-container {
-            flex-direction: column !important;
-        }
-
-        .project-card {
-            max-width: 100%;
-        }
-    }
-</style>
 
 <body>
     <div class="section hero-section">
@@ -351,54 +90,68 @@
 
     <div class="section project-section">
         <div class="container project-container d-flex align-items-center justify-content-end">
-            <img src="https://placehold.co/800x500" alt="project 1" class="project-screenshot">
+            <img src="https://placehold.co/800x500" alt="project 1" class="project-screenshot left">
             <div class="col-md-5 d-none d-md-block"></div>
             <a href="https://github.com" target="_blank"
                 class="text-decoration-none text-white col-12 col-md-7 col-lg-5">
                 <div class="project-card">
                     <h3 class="accent">Project One</h3>
-                    <p class="mb-0">
-                        An innovative application that solves real-world problems. Built with modern
-                        technologies and best practices, featuring an intuitive user interface and
-                        powerful functionality.
+                    <p class="mb-3">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non impedit dolor, ipsa quaerat
+                        maiores doloribus! Minus enim, suscipit voluptatibus assumenda perspiciatis repellendus
+                        perferendis incidunt, mollitia in nobis reprehenderit iste magni.
                     </p>
+                    <div class="project-tags">
+                        <span class="tag">React</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">MongoDB</span>
+                    </div>
                 </div>
             </a>
         </div>
     </div>
 
-
     <div class="section project-section">
-        <div class="container project-container d-flex align-items-center justify-content-end">
-            <img src="https://placehold.co/800x500" alt="project 1" class="project-screenshot">
-            <div class="col-md-5 d-none d-md-block"></div>
+        <div class="container project-container d-flex align-items-center justify-content-start">
             <a href="https://github.com" target="_blank"
                 class="text-decoration-none text-white col-12 col-md-7 col-lg-5">
                 <div class="project-card">
                     <h3 class="accent">Project Two</h3>
-                    <p class="mb-0">
-                        An innovative application that solves real-world problems. Built with modern
-                        technologies and best practices, featuring an intuitive user interface and
-                        powerful functionality.
+                    <p class="mb-3">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus, fuga. Inventore tempore,
+                        error quia, accusamus necessitatibus perferendis consequatur maiores temporibus voluptatum unde
+                        commodi nam deleniti animi dolorum quo, esse eaque!
                     </p>
+                    <div class="project-tags">
+                        <span class="tag">Python</span>
+                        <span class="tag">Flask</span>
+                        <span class="tag">PostgreSQL</span>
+                    </div>
                 </div>
             </a>
+            <div class="col-md-5 d-none d-md-block"></div>
+            <img src="https://placehold.co/800x500" alt="project 2" class="project-screenshot right">
         </div>
     </div>
 
-
     <div class="section project-section">
         <div class="container project-container d-flex align-items-center justify-content-end">
-            <img src="https://placehold.co/800x500" alt="project 1" class="project-screenshot">
+            <img src="https://placehold.co/800x500" alt="project 3" class="project-screenshot left">
+            <div class="col-md-5 d-none d-md-block"></div>
             <a href="https://github.com" target="_blank"
                 class="text-decoration-none text-white col-12 col-md-7 col-lg-5">
                 <div class="project-card">
                     <h3 class="accent">Project Three</h3>
-                    <p class="mb-0">
-                        An innovative application that solves real-world problems. Built with modern
-                        technologies and best practices, featuring an intuitive user interface and
-                        powerful functionality.
+                    <p class="mb-3">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eius recusandae rerum vitae
+                        distinctio eos suscipit dolorem, deleniti quo eum iste voluptas itaque consectetur, magnam
+                        possimus nobis a ullam amet.
                     </p>
+                    <div class="project-tags">
+                        <span class="tag">Java</span>
+                        <span class="tag">Spring Boot</span>
+                        <span class="tag">AWS</span>
+                    </div>
                 </div>
             </a>
         </div>
@@ -407,7 +160,12 @@
 
     <div class="section" style="min-height: auto; scroll-snap-align: end;">
         <footer class="container-fluid">
-            <p>&copy; <span id="year">Hamza Nasir</span></p>
+            <p class="mb-1">© <span id="year"></span> Hamza Nasir</p>
+            <div>
+                <a href="https://github.com" class="me-3"><i class="fa-brands fa-github"></i></a>
+                <a href="https://linkedin.com" class="me-3"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://x.com"><i class="fa-brands fa-twitter"></i></a>
+            </div>
         </footer>
     </div>
 
