--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
             transform: translateY(-3px);
         }
 
+        .social-links a:active {
+            color: #3B82F6;
+            background: rgba(59, 130, 246, 0.1);
+            border-color: rgba(59, 130, 246, 0.3);
+            transform: translateY(-3px);
+        }
+
         .scroll-indicator {
             animation: bounce 2s infinite;
             cursor: pointer;
@@ -255,6 +262,14 @@
             box-shadow: 0 12px 32px rgba(59, 130, 246, 0.2);
         }
 
+        .tech-icon:active {
+            transform: translateY(-8px) scale(1.05);
+            background: rgba(59, 130, 246, 0.1);
+            border-color: rgba(59, 130, 246, 0.3);
+            color: #3B82F6;
+            box-shadow: 0 12px 32px rgba(59, 130, 246, 0.2);
+        }
+
         .project-section {
             position: relative;
             overflow: hidden;
@@ -326,6 +341,13 @@
         }
 
         .project-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 20px 60px rgba(59, 130, 246, 0.2);
+            border-color: rgba(59, 130, 246, 0.3);
+            background: rgba(30, 41, 59, 0.95);
+        }
+
+        .project-card:active {
             transform: translateY(-8px);
             box-shadow: 0 20px 60px rgba(59, 130, 246, 0.2);
             border-color: rgba(59, 130, 246, 0.3);
